--- a/src/components/PagesCss/PageCss.css
+++ b/src/components/PagesCss/PageCss.css
@@ -612,11 +612,8 @@ input[type="checkbox"] {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
   height: 100%;
-  /* 
-  border: 1px solid black; */
-
 }
 
 .End-recommend-result {
