--- a/src/components/PagesCss/PageCss.css
+++ b/src/components/PagesCss/PageCss.css
@@ -19,31 +19,7 @@ li {
   box-sizing: border-box;
 
   position: relative;
-
-  /* animation: pageStart-slidein 0.6s ease-in-out;
-  animation-fill-mode: forwards; */
-
 }
-
-
-
-/* .Card-container:hover{
-background-color: #fafafa;
-} */
-
-
-
-/* .Card-container:hover .Card-hash {
-  color: white;
-}
-
-.Card-container:hover .Card-hr {
-  border-color: white;
-}
-
-.Card-container:hover .Card-img {
-  display: block;
-} */
 
 
 .Card-title {
@@ -472,6 +448,10 @@ input[type="checkbox"] {
   font-weight: 500;
 }
 
+.checkboxStyle [type="checkbox"]:disabled+span {
+  color: white;
+}
+
 
 
 /* pagePriority css */
@@ -597,6 +577,9 @@ input[type="checkbox"] {
 }
 
 
+/* PageTendency Css */
+
+
 /* PageEnd Css */
 
 .End-container {
@@ -605,6 +588,7 @@ input[type="checkbox"] {
   height: calc(100vh - 67px);
 
   display: flex;
+
   justify-content: space-between;
 }
 
@@ -627,8 +611,10 @@ input[type="checkbox"] {
   margin: 0px 40px;
 }
 
+
 .End-recommend-btn {
   display: flex;
+
   border: 1px solid black;
   width: 200px;
   justify-content: space-between;
@@ -668,10 +654,10 @@ input[type="checkbox"] {
   margin: 0px 3px;
 }
 
-.End-powerbi {
+/* .End-powerbi-wrap {
   font-size: 48px;
   margin-right: 50px;
-}
+} */
 
 
 
@@ -679,6 +665,6 @@ input[type="checkbox"] {
 
 .embededReport {
   margin: 0px;
-  height: 80vh;
-  width: 60vw;
+  height: 100vh;
+  width: 70vw;
 }
